# coppice

./: README.md  package-lock.json  package.json
.claude/commands/: release.md
.github/workflows/: auto-release.yml  build.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  settings.rs
src-tauri/src/commands/: external.rs  github.rs  mod.rs  settings.rs  terminal.rs  worktree.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: pty_manager.rs  shell_env.rs
src/components/AppSettings/: AppSettingsModal.tsx
src/components/DiffViewer/: DiffViewer.tsx
src/components/PRStatus/: PRPanel.tsx
src/components/ProjectSettings/: ProjectSettingsModal.tsx
src/components/Sidebar/: ChangesPanel.tsx  CreateWorktreeModal.tsx  ProjectTree.tsx  Sidebar.tsx  SidebarRunners.tsx
src/components/Terminal/: TerminalPanel.tsx
src/components/WorktreeView/: WorktreeView.tsx
src/lib/: commands.ts  types.ts
src/stores/: appStore.ts
