[package]
name = "coppice"
version = "0.1.9"
edition = "2021"

[lib]
name = "coppice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "coppice"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
dirs = "5"
portable-pty = "0.8"
